<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.comp90018.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.comp90018.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:name="com.example.comp90018.ui.dashboard.DashboardFragment"-->
<!--        android:label="@string/title_dashboard"-->
<!--        tools:layout="@layout/fragment_dashboard" />-->

<!--    <fragment-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:name="com.example.comp90018.ui.notifications.NotificationsFragment"-->
<!--        android:label="@string/title_notifications"-->
<!--        tools:layout="@layout/fragment_notifications" />-->

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.example.comp90018.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_article_recycler" />

    <fragment

        android:id="@+id/navigation_settings"
        android:name="com.example.comp90018.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>