<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Setting"-->
<!--            android:textStyle="normal"-->
<!--            android:textSize="35sp"-->
<!--            android:gravity="center"-->
<!--            android:background="#22000000"-->
<!--            android:textColor="@color/black"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/setting_person_image"
                android:layout_width="203dp"
                android:layout_height="117dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_person_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="22sp" />
<!--            android:textColor="#000000"-->

            <EditText
                android:id="@+id/setting_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25dp"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="22sp" />
<!--            android:textColor="#000000"-->

            <EditText
                android:id="@+id/setting_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25dp"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_marginBottom="10dp"/>
<!--            android:textColor="#000000"-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Gender"
                android:textSize="22sp"
                android:layout_marginBottom="5dp"/>
<!--                android:textColor="#000000"-->

            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/gender" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/underlinePrimary"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textSize="22sp"
                android:layout_marginBottom="5dp"/>
<!--            android:textColor="#000000"-->

            <!--        <DatePicker-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:datePickerMode="spinner"-->
            <!--            android:calendarViewShown="false"/>-->

            <TextView
                android:id="@+id/setting_DOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25sp"
                android:textColor="@color/colorTextPrimary"/>
<!--            android:textColor="#000000"-->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/underlinePrimary"
                android:layout_marginBottom="15dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/color_mode"
                android:textSize="25sp" />
<!--                android:textColor="#000000"-->

            <Switch
                android:id="@+id/night_switch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>



        </LinearLayout>


    </LinearLayout>


</ScrollView>
